k8s/home/cloud-sync.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-sync
