k8s/home/frigate.yml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
