k8s/home/icloudpd.yml
apiVersion: v1
kind: Namespace
metadata:
  name: icloudpd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icloud-backup-ashley
  namespace: icloudpd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: icloud-backup-ashley
  template:
    metadata:
      labels:
        app: icloud-backup-ashley
    spec:
      securityContext:
        fsGroup: 5000
      containers:
        - name: icloudpd
          image: icloudpd/icloudpd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8080
          command:
            - "/script/launch.sh"
          volumeMounts:
            - name: target-vol
              mountPath: /data
            - name: script-vol
              mountPath: /script
      volumes:
        - name: target-vol
          persistentVolumeClaim:
            claimName: icloud-backups-pvc
        - name: script-vol
          configMap:
            name: icloudpd-launch-script
            defaultMode: 0744
