k8s/home/mosquitto.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels: 
        app: mosquitto
    spec:
      containers:
        - name: mosquitto-container
          image: eclipse-mosquitto:2.0.11
          volumeMounts:
            - name: mosquitto-pvc
              mountPath: /mosquitto/data
            - name: mosquitto-conf
              mountPath: /mosquitto/config
          ports:
            - name: mqtt
              containerPort: 1883
            - name: mqtt-ws
              containerPort: 9001
      volumes:
        - name: mosquitto-pvc
          persistentVolumeClaim:
            claimName: mosquitto-pvc
        - name: mosquitto-conf
          configMap:
            name: mosquitto-conf
            items:
              - key: mosquitto.conf
                path: mosquitto.conf

---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-svc
  namespace: mosquitto
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mqtt.home.analogrelay.net
spec:
  type: LoadBalancer
  ports:
  - name: mqtt
    port: 1883
    targetPort: mqtt
    protocol: TCP
  - name: mqtt-ws
    port: 9001
    targetPort: mqtt-ws
    protocol: TCP
  selector:
    app: mosquitto
