k8s/home/postgres.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels: 
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:16.1
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
          ports:
            - name: postgres
              containerPort: 5432
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: postgres
  annotations:
    external-dns.alpha.kubernetes.io/hostname: db.home.analogrelay.net
spec:
  type: LoadBalancer
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres 
    protocol: TCP
  selector:
    app: postgres
