k8s/home/aria.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aria

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aria
  namespace: aria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aria
  template:
    metadata:
      labels: 
        app: aria
    spec:
      containers:
        - name: aria-web
          image: p3terx/ariang:latest
          ports:
            - name: http
              containerPort: 6880
        - name: aria-daemon
          image: p3terx/aria2-pro:latest
          ports:
            - name: rpc
              containerPort: 6800
            - name: bt-listen
              protocol: TCP
              containerPort: 6888
            - name: dht-listen
              protocol: UDP
              containerPort: 6888
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: public
              mountPath: /public
      volumes:
        - name: downloads
          nfs:
            server: avalanche.node.analogrelay.net
            path: /mnt/data/shares/public/downloads
        - name: public
          nfs:
            server: avalanche.node.analogrelay.net
            path: /mnt/data/shares/public
        - name: config
          nfs:
            server: avalanche.node.analogrelay.net
            path: /mnt/data/k3s/shares/aria.aria-config

---
apiVersion: v1
kind: Service
metadata:
  name: aria-svc
  namespace: aria
spec:
  type: ClusterIP
  selector:
    app: aria
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: rpc
    port: 6800
    targetPort: rpc
    protocol: TCP
  - name: peer-tcp
    port: 6888
    targetPort: peer-tcp
    protocol: TCP
  - name: peer-udp
    port: 6888
    targetPort: peer-udp
    protocol: UDP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria-rpc-ingress
  namespace: aria
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: aria-rpc.home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aria-svc
            port:
              number: 6800
  tls:
    - hosts:
        - aria-rpc.home.analogrelay.net
      secretName: aria-rpc-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria-ingress
  namespace: aria
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: aria.home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aria-svc
            port:
              number: 80
  tls:
    - hosts:
        - aria.home.analogrelay.net
      secretName: aria-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria-ingress-ts
  namespace: aria
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: aria-svc
      port:
        number: 80
  tls:
    - hosts:
        - aria

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria-rpc-ingress-ts
  namespace: aria
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: aria-svc
      port:
        number: 6800
  tls:
    - hosts:
        - aria-rpc
