k8s/home/guacamole.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guacd
  name: guacd
  namespace: guacamole
spec:
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacd
              containerPort: 4822

---
apiVersion: v1
kind: Service
metadata:
  name: guacd-svc
  namespace: guacamole
spec:
  type: ClusterIP
  ports:
  - name: guacd
    port: 4822
    targetPort: guacd
    protocol: TCP
  selector:
    app: guacd

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guacamole
  name: guacamole
  namespace: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacamole
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-svc
  namespace: guacamole
spec:
  type: ClusterIP
  ports:
  - name: guacamole
    port: 80
    targetPort: guacamole
    protocol: TCP
  selector:
    app: guacamole

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: guacamole.home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole-svc
            port:
              number: 80
  tls:
    - hosts:
        - guacamole.home.analogrelay.net
      secretName: guacamole-ingress-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress-ts
  namespace: guacamole
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: guacamole-svc
      port:
        number: 80
  tls:
    - hosts:
        - guacamole
