k8s/home/home-assistant.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels: 
        app: homeassistant
    spec:
      containers:
        - name: hass-container
          image: homeassistant/home-assistant:2023.9
          volumeMounts:
            - name: hass-pvc
              mountPath: /config
          ports:
            - name: hass
              containerPort: 8123
      volumes:
        - name: hass-pvc
          persistentVolumeClaim:
            claimName: hass-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: hass-svc
  namespace: homeassistant
spec:
  type: ClusterIP
  ports:
  - name: hass
    port: 80
    targetPort: hass
    protocol: TCP
  selector:
    app: homeassistant

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-ingress
  namespace: homeassistant
spec:
  ingressClassName: traefik
  rules:
  - host: home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hass-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-ingress-ts
  namespace: homeassistant
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: hass-svc
      port:
        number: 80
  tls:
    - hosts:
        - home
