k8s/home/paperless.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.2.3-alpine
          imagePullPolicy: IfNotPresent
          command: ["redis-server", "--save", "1800", "1"]
          volumeMounts:
            - name: redis-storage
              mountPath: /data
          ports:
            - name: redis
              containerPort: 6379
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tika
  name: tika
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
        - name: tika
          image: ghcr.io/paperless-ngx/tika:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tika
              containerPort: 9998

---
apiVersion: v1
kind: Service
metadata:
  name: tika-svc
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: tika
      port: 9998
      targetPort: tika
      protocol: TCP
  selector:
    app: tika

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gotenberg
  name: gotenberg
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: docker.io/gotenberg/gotenberg:7.10
          imagePullPolicy: IfNotPresent
          command:
            [
              "gotenberg",
              "--chromium-disable-javascript=true",
              "--chromium-allow-list=file:///tmp/.*",
            ]
          ports:
            - name: gotenberg
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg-svc
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: gotenberg
      port: 3000
      targetPort: gotenberg
      protocol: TCP
  selector:
    app: gotenberg

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
  name: paperless
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: paperlessngx/paperless-ngx:2.14
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: cabinet
              mountPath: /opt/paperless
          ports:
            - name: paperless
              containerPort: 8000
      volumes:
        - name: cabinet
          nfs:
            server: avalanche.node.analogrelay.net
            path: /mnt/data/shares/public/cabinet

---
apiVersion: v1
kind: Service
metadata:
  name: paperless-svc
  namespace: paperless
spec:
  type: ClusterIP
  ports:
    - name: paperless
      port: 8000
      targetPort: paperless
      protocol: TCP
  selector:
    app: paperless

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cabinet.home.analogrelay.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-svc
                port:
                  number: 8000
  tls:
    - hosts:
        - cabinet.home.analogrelay.net
      secretName: paperless-ingress-cert
