k8s/home/traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 80
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-in
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.home.analogrelay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 80
  tls:
    - hosts:
        - traefik.home.analogrelay.net
      secretName: traefik-ingress-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ts
  namespace: kube-system
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: traefik-dashboard
      port:
        number: 80
  tls:
    - hosts:
        - traefik

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
